--- a/buy.html
+++ b/buy.html
@@ -38,7 +38,7 @@
         <a class="footer-link" href="??">Youtube SHINOBI</a>
         <a class="footer-link" href="https://discord.gg/UBMSDEJWZZ">Updates on DISCORD</a>
         <a class="footer-link" href="https://twitter.com/THUNDER72095154">Official Twitter</a>
-        <a class="footer-link" href="main.html">🔙Go back</a>
+        <a class="footer-link" href="index.html">🔙Go back</a>
         <p class="copy">©️2024 KINETIC and SHINOBI</p>
     </div>
 
